Fixed issues on mobile.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -288,7 +288,7 @@ p {
 
   #bodySection {
     margin: 38px;
-    margin-top: 45px;
+    margin-top: 33px;
   }
 
   #mainImage{
@@ -307,7 +307,7 @@ p {
   }
 
   .media-container {
-    margin-left: -7%;
+    margin-left: -6%;
   }
 
   .container {
@@ -317,7 +317,7 @@ p {
     margin-right: 22px;
   }
   .linkedin-container {
-    top: 54%;
+    top: 57%;
   }
 
   .github-container {
@@ -325,10 +325,10 @@ p {
   }
 
   .twitter-container {
-    top: 66%;
+    top: 69%;
   }
 
   .email-container {
-    top: 78%;
+    top: 81%;
   }
 }
